objects/mil_scb_Issue_set__c/mil_scb_Issue_set__c.object-meta.xml
<CustomObject>
    <label>Neighbour Issue Set</label>
    <nameField>
        <displayFormat>Issue_Set_{YYYY}{MM}{DD}-{0000000000}</displayFormat>
        <label>Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Neighbour Issue Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>