objects/mil_scb_Issue_set__c/fields/Chinese_Fund_Type__c.field-meta.xml
<CustomField>
    <fullName>Chinese_Fund_Type__c</fullName>
    <description>To calculate Chinese Fund Type Value when Type is MPF or ORSO AND Subtype is Fund Fact Sheets AND Language is ZH or Bilingual</description>
    <formula>IF(
  AND( 
       TEXT( SubType__c ) = "Fund Fact Sheets", 
       TEXT(  Type__c  ) = "MPF", 
       OR(TEXT(  Language__c ) = "ZH", TEXT(  Language__c ) = "Bilingual" )
     ),
  TEXT (  MPF_Fund_Type_Chinese__c  ), 
  IF(
  AND( 
       TEXT( SubType__c ) = "Fund Fact Sheets", 
       TEXT(  Type__c  ) = "ORSO", 
       OR(TEXT(  Language__c ) = "ZH", TEXT(  Language__c ) = "Bilingual" )
     ),
     TEXT (   ORSO_Fund_Type_Chinese__c   ), 
     "N/A"
  )
)</formula>
    <label>Chinese Fund Type</label>
    <type>Text</type>
</CustomField>