objects/mil_scb_Issue_set__c/fields/En_lang__c.field-meta.xml
<CustomField>
    <fullName>En_lang__c</fullName>
    <label>English Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>