objects/mil_scb_Issue_set__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EN</fullName>
            </value>
            <value>
                <fullName>ZH</fullName>
            </value>
            <value>
                <fullName>Bilingual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>