objects/mil_scb_Issue_set__c/fields/MPF_Fund_Type_Chinese__c.field-meta.xml
<CustomField>
    <fullName>MPF_Fund_Type_Chinese__c</fullName>
    <label>MPF Fund Type Chinese</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>---------------- 基本計劃 ----------------</fullName>
            </value>
            <value>
                <fullName>宏利強積金計劃 - 基本 基金便覽合併版</fullName>
            </value>
            <value>
                <fullName>100 宏利在職平均回報保證基金 - 基本</fullName>
            </value>
            <value>
                <fullName>101 宏利債券基金 - 基本</fullName>
            </value>
            <value>
                <fullName>105 宏利強積金保守基金 - 基本</fullName>
            </value>
            <value>
                <fullName>110 宏利增長基金 - 基本</fullName>
            </value>
            <value>
                <fullName>115 宏利平衡基金 - 基本</fullName>
            </value>
            <value>
                <fullName>120 宏利穩定基金 - 基本</fullName>
            </value>
            <value>
                <fullName>宏利強積金核心累積基金 - 基本</fullName>
            </value>
            <value>
                <fullName>宏利強積金 65 歲後基金 - 基本</fullName>
            </value>
            <value>
                <fullName>---------------- 全面計劃 ----------------</fullName>
            </value>
            <value>
                <fullName>宏利強積金計劃 - 全面 基金便覽合併版</fullName>
            </value>
            <value>
                <fullName>125 宏利在職平均回報保證基金 - 全面</fullName>
            </value>
            <value>
                <fullName>126 宏利穩定基金 - 全面</fullName>
            </value>
            <value>
                <fullName>127 宏利平衡基金 - 全面</fullName>
            </value>
            <value>
                <fullName>128 宏利增長基金 - 全面</fullName>
            </value>
            <value>
                <fullName>129 宏利債券基金 - 全面</fullName>
            </value>
            <value>
                <fullName>130 宏利強積金保守基金 - 全面</fullName>
            </value>
            <value>
                <fullName>135 信安香港股票基金</fullName>
            </value>
            <value>
                <fullName>140 安聯精選增長基金</fullName>
            </value>
            <value>
                <fullName>145 富達環球投資基金 - 增長基金</fullName>
            </value>
            <value>
                <fullName>150 匯豐強積金"A"系列 - 中港股票基金</fullName>
            </value>
            <value>
                <fullName>155 景順環球股票基金</fullName>
            </value>
            <value>
                <fullName>165 施羅德強積金亞洲基金</fullName>
            </value>
            <value>
                <fullName>170 鄧普頓強積金亞洲均衡基金</fullName>
            </value>
            <value>
                <fullName>180 安聯精選均衡基金</fullName>
            </value>
            <value>
                <fullName>185 富達環球投資基金 - 均衡基金</fullName>
            </value>
            <value>
                <fullName>190 匯豐強積金"A"系列 - 均衡基金</fullName>
            </value>
            <value>
                <fullName>195 景順環球均衡基金</fullName>
            </value>
            <value>
                <fullName>210 施羅德強積金均衡基金</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>