objects/mil_scb_Issue_set__c/fields/MPF_Fund_Type_English__c.field-meta.xml
<CustomField>
    <fullName>MPF_Fund_Type_English__c</fullName>
    <label>MPF Fund Type English</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-------------- Basic Plan --------------</fullName>
            </value>
            <value>
                <fullName>Consolidated Fund Fact Sheet for Manulife MPF - Basic</fullName>
            </value>
            <value>
                <fullName>100 Manulife Career Average Guaranteed Fund - Basic</fullName>
            </value>
            <value>
                <fullName>101 Manulife Bond Fund - Basic</fullName>
            </value>
            <value>
                <fullName>105 Manulife MPF Conservative  Fund - Basic</fullName>
            </value>
            <value>
                <fullName>110 Manulife Growth Fund - Basic</fullName>
            </value>
            <value>
                <fullName>115 Manulife Balanced Fund - Basic</fullName>
            </value>
            <value>
                <fullName>120 Manulife Stable Fund - Basic</fullName>
            </value>
            <value>
                <fullName>Manulife MPF Core Accumulation Funds - Basic</fullName>
            </value>
            <value>
                <fullName>Manulife MPF Age 65 Plus Funds - Basic</fullName>
            </value>
            <value>
                <fullName>----------- Advanced Plan -----------</fullName>
            </value>
            <value>
                <fullName>Consolidated Fund Fact Sheet for Manulife MPF - Advanced</fullName>
            </value>
            <value>
                <fullName>125 Manulife Career Average Guaranteed Fund - Advanced</fullName>
            </value>
            <value>
                <fullName>126 Manulife Stable Fund - Advanced</fullName>
            </value>
            <value>
                <fullName>127 Manulife Balanced Fund - Advanced</fullName>
            </value>
            <value>
                <fullName>128 Manulife Growth Fund - Advanced</fullName>
            </value>
            <value>
                <fullName>129 Manulife Bond Fund - Advanced</fullName>
            </value>
            <value>
                <fullName>130 Manulife MPF Conservative Fund - Advanced</fullName>
            </value>
            <value>
                <fullName>135 Principal Hong Kong Equity Fund</fullName>
            </value>
            <value>
                <fullName>140 Allianz Choice Growth Fund</fullName>
            </value>
            <value>
                <fullName>145 Fidelity Global Investment Fund - Growth Fund</fullName>
            </value>
            <value>
                <fullName>150 HSBC MPF "A" - Hong Kong and Chinese Equity Fund</fullName>
            </value>
            <value>
                <fullName>155 Invesco Global Equities Fund</fullName>
            </value>
            <value>
                <fullName>165 Schroder MPF Asian Fund</fullName>
            </value>
            <value>
                <fullName>170 Templeton MPF Asian Balanced Fund</fullName>
            </value>
            <value>
                <fullName>180 Allianz Choice Balanced Fund</fullName>
            </value>
            <value>
                <fullName>185 Fidelity Global Investment Fund - Balanced Fund</fullName>
            </value>
            <value>
                <fullName>190 HSBC MPF "A" - Balanced Fund</fullName>
            </value>
            <value>
                <fullName>195 Invesco Global Balanced Fund</fullName>
            </value>
            <value>
                <fullName>210 Schroder MPF Balanced Investment Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>