objects/mil_scb_Issue_set__c/fields/Neighbour_Issue_Set_Group__c.field-meta.xml
<CustomField>
    <fullName>Neighbour_Issue_Set_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Neighbour Issue Set Group</label>
    <referenceTo>mil_scb_Issue_Set_Group__c</referenceTo>
    <relationshipLabel>Neighbour Issue Sets</relationshipLabel>
    <relationshipName>Neighbour_Issue_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>