objects/mil_scb_Issue_set__c/fields/No_of_Active_Issues__c.field-meta.xml
<CustomField>
    <fullName>No_of_Active_Issues__c</fullName>
    <label>Number of Active Issues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>