objects/mil_scb_Issue_set__c/fields/Number_of_Archived_Issue_Sets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Archived_Issue_Sets__c</fullName>
    <label>Number of Archived Issue Sets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>