objects/mil_scb_Issue_set__c/fields/ORSO_Fund_Type_English__c.field-meta.xml
<CustomField>
    <fullName>ORSO_Fund_Type_English__c</fullName>
    <label>ORSO Fund Type English</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>500 Allianz Choice Growth Fund</fullName>
            </value>
            <value>
                <fullName>510 Baring International Bond Fund</fullName>
            </value>
            <value>
                <fullName>516 Schroder International Selection Fund - Global Bond</fullName>
            </value>
            <value>
                <fullName>520 Schroder HK Money Market Fund</fullName>
            </value>
            <value>
                <fullName>525 Schroder US Dollar Money Fund</fullName>
            </value>
            <value>
                <fullName>530 Allianz Little Dragons</fullName>
            </value>
            <value>
                <fullName>536 Schroder International Selection Fund - Asian Opportunities</fullName>
            </value>
            <value>
                <fullName>540 HSBC Managed Growth Fund</fullName>
            </value>
            <value>
                <fullName>545 Schroder Balanced Investment Fund</fullName>
            </value>
            <value>
                <fullName>550 Allianz Choice Balanced Fund</fullName>
            </value>
            <value>
                <fullName>555 Baring Asia Balanced Fund</fullName>
            </value>
            <value>
                <fullName>560 Templeton Global Balanced Fund</fullName>
            </value>
            <value>
                <fullName>565 Schroder Stable Growth Fund</fullName>
            </value>
            <value>
                <fullName>570 HSBC Hong Kong Equity Fund</fullName>
            </value>
            <value>
                <fullName>575 Morgan Stanley Investment Funds US Growth Fund</fullName>
            </value>
            <value>
                <fullName>580 BlackRock Global Funds - European Fund</fullName>
            </value>
            <value>
                <fullName>585 Allianz Japan Equity</fullName>
            </value>
            <value>
                <fullName>591 Manulife Stable Fund</fullName>
            </value>
            <value>
                <fullName>592 Manulife Balanced Fund</fullName>
            </value>
            <value>
                <fullName>593 Manulife Growth Fund</fullName>
            </value>
            <value>
                <fullName>596 JPMorgan SAR Global Bond Fund</fullName>
            </value>
            <value>
                <fullName>597 Fidelity Funds - International Bond Fund</fullName>
            </value>
            <value>
                <fullName>598 Schroder International Selection Fund - Hong Kong Dollar Bond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>