objects/mil_scb_Issue_set__c/fields/Parent_Issue_Set__c.field-meta.xml
<CustomField>
    <fullName>Parent_Issue_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Issue Set</label>
    <referenceTo>mil_scb_Issue_set__c</referenceTo>
    <relationshipLabel>Archived Issues</relationshipLabel>
    <relationshipName>Archived_Issue_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>