objects/mil_scb_Issue_set__c/fields/PDF_Name__c.field-meta.xml
<CustomField>
    <fullName>PDF_Name__c</fullName>
    <description>This field is to be only used for Data Load and not from the front-end. This is to tag an Issue Set to its related PDF during Data Load and cross-verification post load.</description>
    <label>Associated PDF Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>