objects/mil_scb_Issue_set__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Summary</fullName>
            </value>
            <value>
                <fullName>Fund Fact Sheets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>