objects/mil_scb_Issue_set__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPF</fullName>
            </value>
            <value>
                <fullName>ORSO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>