objects/mil_scb_Issue_set__c/fields/ZH_lang__c.field-meta.xml
<CustomField>
    <fullName>ZH_lang__c</fullName>
    <label>Chinese Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>