objects/mil_scb_Issue_set__c/recordTypes/IssueSet_Approved.recordType-meta.xml
<RecordType>
    <fullName>IssueSet_Approved</fullName>
    <active>true</active>
    <label>IssueSet_Approved</label>
</RecordType>