objects/mil_scb_Issue_set__c/recordTypes/IssueSet_Archived.recordType-meta.xml
<RecordType>
    <fullName>IssueSet_Archived</fullName>
    <active>true</active>
    <label>IssueSet_Archived</label>
</RecordType>