objects/mil_scb_Issue_set__c/recordTypes/IssueSet_Open.recordType-meta.xml
<RecordType>
    <fullName>IssueSet_Open</fullName>
    <active>true</active>
    <label>IssueSet_Open</label>
</RecordType>