objects/mil_scb_Issue_set__c/recordTypes/IssueSet_Pending.recordType-meta.xml
<RecordType>
    <fullName>IssueSet_Pending</fullName>
    <active>true</active>
    <label>IssueSet_Pending</label>
</RecordType>