objects/mil_scb_Issue_set__c/validationRules/LanguageValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>LanguageValidation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
IF( AND( TEXT(Language__c) = "EN", 
OR( ISBLANK(En_lang__c), NOT(ISBLANK(ZH_lang__c)))
), True, False ),
IF( AND( TEXT(Language__c) = "ZH", 
OR( ISBLANK(ZH_lang__c), NOT(ISBLANK(En_lang__c)))
), True, False ),
IF( 
AND( 
TEXT(Language__c) = "Bilingual", 
OR (
ISBLANK(En_lang__c),ISBLANK(ZH_lang__c)

)
), True, False )


)</errorConditionFormula>
    <errorMessage>Please enter the Issue Name(s) based on the selected language.</errorMessage>
</ValidationRule>