objects/mil_scb_Issue_set__c/listViews/Archived.listView-meta.xml
<ListView>
    <fullName>Archived</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>En_lang__c</columns>
    <columns>ZH_lang__c</columns>
    <columns>Type__c</columns>
    <columns>SubType__c</columns>
    <columns>isArchived__c</columns>
    <columns>Issue_Month__c</columns>
    <columns>Issue_Year__c</columns>
    <columns>Neighbour_Issue_Set_Group__c</columns>
    <columns>No_of_Active_Issues__c</columns>
    <columns>Parent_Issue_Set__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Archived</value>
    </filters>
    <label>Archived</label>
</ListView>