objects/mil_scb_Issue_set__c/listViews/Neighbour_Issueset_mil_scb_Issue_set.listView-meta.xml
<ListView>
    <fullName>Neighbour_Issueset_mil_scb_Issue_set</fullName>
    <filterScope>Queue</filterScope>
    <label>Neighbour Issue Set Queue</label>
    <queue>Neighbour_Issueset</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>